<resources>
    <string name="app_name">Seaker</string>
    <string name="developedBy">Developed by BehindTheDesk Studios.</string>
    <string name="chooseRolePrompt">Choose your professional role</string>
    <string name="teamMember">Team Member</string>
    <string name="companyManager">Company Manager</string>
    <string name="administrator">Administrator</string>
    <string name="reportedSightings">Reported Sightings</string>
    <string name="recentSightings">Recent Sightings</string>
    <string name="otherSightings">Other Sightings</string>
    <string name="notSubmitted"> - Not submitted</string>
    <string name="dateRS">Date:</string>
    <string name="timeRS">Time:</string>
    <string name="sightingSpeciesRS">Sighting Species:</string>
    <string name="reportedBy">Reported by:</string>
    <string name="addTeamMember">Add Team Member</string>
    <string name="name">Name: *</string>
    <string name="email">Email: *</string>
    <string name="password">Password: *</string>
    <string name="userType">User Type: *</string>
    <string name="allTeamMembers">All Team Members</string>
</resources>