<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ChooseRoleActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="117dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="41dp"
        android:text="@string/chooseRolePrompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonCompanyManager"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="41dp"
        android:backgroundTint="#00b6fd "
        android:text="@string/companyManager"
        app:cornerRadius="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTeamMember" />

    <Button
        android:id="@+id/buttonAdministrator"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="41dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/administrator"
        app:cornerRadius="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompanyManager" />

    <Button
        android:id="@+id/buttonTeamMember"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#00314d"
        android:text="@string/teamMember"
        app:cornerRadius="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>