<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="411dp"
            android:layout_height="168dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="13dp"
                android:text="Trip ## - "
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/textView"
                android:text="@string/notSubmitted"
                android:textColor="@color/notSubmitted"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/dateRS"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/textView3"
                android:text="00/00/0000"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/textView4"
                android:text="@string/timeRS"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/textView5"
                android:text="00:00"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/sightingSpeciesRS"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/textView7"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Example that shows off the elipsis"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/reportedBy"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/textView9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Mara Dionisio"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>