<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TeamMemberHomeActivity">

    <Button
        android:id="@+id/button5"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#00b6fd "
        android:text="@string/companyManager"
        app:cornerRadius="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="@+id/shape"
        app:layout_constraintTop_toTopOf="@+id/shape" />

    <Button
        android:id="@+id/button6"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#00b6fd "
        android:text="@string/companyManager"
        app:cornerRadius="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="@+id/shape"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#00b6fd "
        android:text="@string/companyManager"
        app:cornerRadius="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@+id/shape"
        app:layout_constraintStart_toStartOf="@+id/shape" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="117dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="19dp"
        android:text="@string/teamMember"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <shape
        android:id="@+id/shape"
        android:layout_width="305dp"
        android:layout_height="331dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="108dp"
        android:shape="rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <solid android:color="@color/white" />

        <corners android:radius="32dp" />

    </shape>

</androidx.constraintlayout.widget.ConstraintLayout>