<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.ReportedSightingsAdminManagerFragment">

    <!-- Zona branca -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scroll_area"
        android:contentDescription="sectionDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <!-- Back button -->
    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="43dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_btn"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <!-- Section Title -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reportedSightings"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <!-- Scroll Area Vertical -->
    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Conteudo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/recent_sightings"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Recent Sightings List -->
                <TextView
                    android:id="@+id/recent_sightings_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recentSightings"
                    android:textColor="@color/recentSightings"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="15dp"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- Other Sightings List -->
            <LinearLayout
                android:id="@+id/other_sightings"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Other Sightings Title -->
                <TextView
                    android:id="@+id/other_sightings_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otherSightings"
                    android:textColor="@color/otherSightings"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="15dp"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>